--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.5",
     "react": "19.2.3",
